Feat: Mise en place de l'entity Contact et Subject

--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -10,3 +10,6 @@ Created: Créer le
 Updated: Mise à jour le
 Resume: Résumé
 Title: Titre
+Username: Prénom et Nom
+Subject: Destinataire*
+Contacts: Expéditeurs
